# assistant

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  README.md
3thrd/hotkey/: hotkey.cmake  qhotkey.cpp  qhotkey.h  qhotkey_p.h
3thrd/singleton/: singleton-app-gui.cpp  singleton-app-gui.h  singleton.cmake
common/: common.cmake  defines.h  ipc-base.cc  ipc-base.h  ipc.h
data/: assistant-gui.desktop  assistant-gui.service  data.cmake  data.qrc
gui/: CMakeLists.txt  daemon.cc  daemon.h  ipc-client.cc  ipc-client.h  main.cc  tip-dialog.cc  tip-dialog.h  tray.cc  tray.h
model/: install.sh  main.py  poetry.toml  pyproject.toml  run.sh
model/model/: Server.py  Translator.py  ipc.py  main.py  pytorch-to-pt.py  server.py  translator.py
model/model/data/: README.md
service/: CMakeLists.txt  ipc-service.cc  ipc-service.h  main.cc
